[package]
name = "pangolin-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Encrypted local store — SQLite + encrypted blobs. Corruption-safe writes; no plaintext at rest."

[lints]
workspace = true

[features]
# P4 audit M-1 / I-6: forward-compat hook for an external
# integration-test crate that may need to construct presence proofs
# with caller-controlled timestamps or install a mockable `Clock` on a
# `Vault`. Enabling this feature exposes those helpers without the
# `cfg(test)` gate (which only fires inside this crate's own tests).
# The feature carries no compiled artifacts beyond the gated
# helpers themselves; default builds (and external production
# consumers) cannot link against the helpers because the feature
# is opt-in only.
#
# Naming + semantics deliberately mirror similar `test-utilities`
# features in the broader Rust ecosystem (e.g., `tokio` crate).
test-utilities = []

[dependencies]
# Encrypted-blob crypto consumed only through pangolin-crypto's public
# API surface — this crate never invents primitives.
pangolin-crypto = { path = "../pangolin-crypto" }

# Chain-anchor types come from `pangolin-chain` (P7 unification per
# success criterion 6 of `docs/issue-plans/P7.md`). pangolin-store
# re-exports `pangolin_chain::ChainAnchor` so consumers' import paths
# stay stable, but the canonical owner of the type is pangolin-chain.
# The dep is one-way (store → chain); pangolin-chain does NOT depend
# on pangolin-store in production code.
pangolin-chain  = { path = "../pangolin-chain" }

rusqlite          = { workspace = true }
ciborium-ll       = { workspace = true }
ciborium-io       = { workspace = true }
thiserror         = { workspace = true }
zeroize           = { workspace = true }
subtle            = { workspace = true }
# MVP-1 issue 1.2: URL parsing for AccountIdentity validation. Q3 of
# 1.2 accepts any RFC-3986 scheme via `url::Url::parse`. Pinned with
# `default-features = false` so url's serde feature is not enabled by
# us; cargo's feature unification may still flip it on if a transitive
# dep enables it (alloy → url-with-serde) — that affects pangolin-store's
# tree but NOT pangolin-crypto's tree. HIGH-1 (`cargo tree -p pangolin-crypto
# | grep -ci serde == 0`) is preserved by the directional dep arrow:
# pangolin-store depends on pangolin-crypto, never the reverse.
url               = { version = "=2.5.8", default-features = false }
# P4 audit M-3: compile-time thread-safety assertions on `Vault`
# (`Send` is asserted; `Sync` is asserted NOT to be implemented).
static_assertions = { workspace = true }

# P11B fix-pass M-1: safe wrapper around POSIX `umask(2)` so
# `Vault::create` can install a `0o077` umask BEFORE the `.pvf` file
# is created on disk, structurally eliminating the world-readable
# window between `OpenOptions::create_new(true)` and the CLI's
# `chmod 0o600` call. The `nix` crate's `sys::stat::umask` is a
# safe wrapper around the FFI call — no `unsafe` block is needed
# at our call site, which preserves the workspace-wide
# `unsafe_code = "deny"` lint AND `pangolin-store`'s
# `forbid(unsafe_code)` attribute (which `forbid` does not allow
# `#[allow]` to relax). `nix` is `cfg(unix)`-gated so Windows
# builds do not pull it. `nix` does NOT pull `serde` (HIGH-1
# invariant: `cargo tree -p pangolin-crypto | grep -ci serde`
# stays 0; `pangolin-store` itself is downstream of
# `pangolin-crypto` and adding `nix` here cannot affect that
# upstream count).
[target.'cfg(unix)'.dependencies]
nix = { version = "=0.29.0", default-features = false, features = ["fs"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
hex      = { workspace = true }

# P9 fix-pass LOW-1: integration tests in `tests/e2e.rs` use the
# `__test_synthesize_sibling_revision` helper which is now gated
# behind the `test-utilities` feature.  `required-features` ensures
# cargo enables the feature on this crate before compiling the
# integration test.
[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["test-utilities"]
