[package]
name = "pangolin-totp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "RFC 6238 TOTP code generation for Pangolin. Scaffolded by MVP-1 issue 1.1; body lands in 1.7."

[lints]
workspace = true
