[package]
name = "pangolin-totp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "RFC 6238 TOTP code generation + otpauth:// / base32 parsing for Pangolin."

[dependencies]
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
